# Deja-dup

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  requests  traces.0  traces.1
common/: AsyncCommand.c  Backend.c  BackendAuto.c  BackendFile.c  BackendRackspace.c  BackendS3.c  BackendU1.c  Checker.c  CommonUtils.c  CommonUtils.vala  DirHandling.c  Makefile  Makefile.in  Network.c  Operation.c  OperationBackup.c  OperationBackup.vala  OperationFiles.c  OperationRestore.c  OperationRestore.vala  OperationStatus.c  OperationVerify.c  PythonChecker.c  RecursiveDelete.c  RecursiveMove.c  RecursiveOp.c  SimpleSettings.c  ToolPlugin.c  common.h  libcommon.vapi
data/: Makefile  Makefile.in  deja-dup.convert  org.gnome.DejaDup.gschema.xml.in  org.gnome.DejaDup.gschema.xml.new  org.gnome.DejaDup.gschema.xml.new2  org.gnome.DejaDup.gschema.xml.orig
deja-dup/: Assistant.c  AssistantBackup.c  AssistantOperation.c  AssistantOperation.vala  AssistantRestore.c  AssistantRestoreMissing.c  Makefile  Makefile.in  MountOperationAssistant.c  Prompt.c  StatusIcon.c  main.c
help/: Makefile  Makefile.in
man/: Makefile  Makefile.in
monitor/: Makefile  Makefile.in  monitor.c
nautilus/: Makefile  Makefile.in
plugins/: Makefile  Makefile.am  Makefile.in
plugins/apps/: AppsPlugin.c  AppsPlugin.vala  Makefile  Makefile.am  Makefile.in  apps.plugin  libapps.vapi
plugins/apps/.deps/: libapps_la-AppsPlugin.Plo
po/: Makefile  Makefile.in  POTFILES  ar.gmo  ast.gmo  be.gmo  bg.gmo  bn.gmo  bo.gmo  bs.gmo  ca.gmo  ca@valencia.gmo  cs.gmo  cy.gmo  da.gmo  de.gmo  el.gmo  en_AU.gmo  en_GB.gmo  eo.gmo  es.gmo  et.gmo  eu.gmo  fa.gmo  fi.gmo  fo.gmo  fr.gmo  fy.gmo  gd.gmo  gl.gmo  he.gmo  hi.gmo  (+45 more)
(+163 files in other folders)
